--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GalacticBattle</string>
+    <string name="preference_name">my_shared_preferences</string>
+    <string name="preference_key_profile_colors">profile_colors</string>
+    <string name="preference_key_profile_speed">profile_speed</string>
 </resources>
